Added linting locally and in pipline